fix: tab height on mobile screens

--- a/assets/styles/components/tab.scss
+++ b/assets/styles/components/tab.scss
@@ -61,8 +61,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
   @media (max-width: $br1) {
-    height: 90%;
+    height: 88%;
   }
 }
 
